# rcon

./: .README.md.un~  .gitignore  .travis.yml  CMakeLists.txt  README.md  config.c  config.h  config.h.in  description.txt  fmemopen.c  fmemopen.h  main.c  memstream.c  memstream.h  rcon.1  rcon.bashcomp.sh  rcon.h  srcrcon.c  srcrcon.h  sysconfig.h.in
debian/: changelog  control  copyright
tests/: CMakeLists.txt  srcrcontest.c
