CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

INCLUDE(CheckFunctionExists)
FIND_PACKAGE(PkgConfig)

PKG_CHECK_MODULES(GLIB2 REQUIRED glib-2.0)

SET(INSTALL_BASH_COMPLETION ON  CACHE BOOLEAN "Install bash completion?")

SET(SOURCES
  "main.c"
  "srcrcon.c"
  "config.c")
SET(HEADERS
  "srcrcon.h"
  "config.h"
  ${CMAKE_CURRENT_BINARY_DIR}/config.h)

INCLUDE_DIRECTORIES("${CMAKE_SOURCE_DIR}/include"
  ${CMAKE_CURRENT_BINARY_DIR}
  ${GLIB2_INCLUDE_DIRS})

ADD_DEFINITIONS("-Wall -Werror")

CHECK_FUNCTION_EXISTS(arc4random_uniform HAVE_ARC4RANDOM_UNIFORM)
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
  ${CMAKE_CURRENT_BINARY_DIR}/config.h)

ADD_EXECUTABLE(rcon ${SOURCES} ${HEADERS})
TARGET_LINK_LIBRARIES(rcon ${GLIB2_LIBRARIES})

INSTALL(TARGETS rcon RUNTIME DESTINATION bin)
INSTALL(FILES rcon.1 DESTINATION share/man/man1)

IF(INSTALL_BASH_COMPLETION)
  # Try bash completion
  PKG_CHECK_MODULES(BC REQUIRED bash-completion)
  PKG_GET_VARIABLE(COMPLETIONS_DIR bash-completion completionsdir)
  IF(NOT DEFINED COMPLETIONS_DIR)
    MESSAGE(FATAL_ERROR
      "pkg-config of bash-completion does not specify completionsdir")
  ENDIF()
  INSTALL(FILES "rcon.bashcomp.sh"
    DESTINATION ${COMPLETIONS_DIR}
    RENAME "rcon")
ENDIF()
